--- a/src/templates/common/navbar.html
+++ b/src/templates/common/navbar.html
@@ -1,10 +1,12 @@
-<nav class="navbar navbar-dark bg-dark sticky-top">
-    <div class="container box">
-        <a class="navbar-brand" href="/">{{ sitename }}</a>
-        <form class="d-flex" role="search">
-            <button type="button" class="btn btn-outline-success btn-sm" id="setting-btn"
-                    data-bs-toggle="modal" data-bs-target="#settings-modal"
-            >Settings</button>
-        </form>
-    </div>
-</nav>
+<header>
+    <nav class="navbar navbar-dark bg-dark sticky-top">
+        <div class="container box">
+            <a class="navbar-brand" href="/">{{ sitename }}</a>
+            <form class="d-flex" role="search">
+                <button type="button" class="btn btn-outline-success btn-sm" id="setting-btn"
+                        data-bs-toggle="modal" data-bs-target="#settings-modal"
+                >Settings</button>
+            </form>
+        </div>
+    </nav>
+</header>
