--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -8,54 +8,51 @@
 <body>
 
 {% include 'common/navbar.html' %}
-
-
-<div class="container box mt-5">
-    <h2 class="fs-5">Books</h2>
-    <div class="row">
-        {% for book in books %}
-            <div class="col-12 col-sm-4 d-flex justify-content-center">
-                <div class="card mt-3 border-0 text-center" style="width: 10rem;">
-                    <a href="{{ url_for('get_book', book_slug=book.slug) }}">
-                        <img src="{{ book.cover }}" class="card-img-top cover" alt="{{ book.name }}">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a href="{{ url_for('get_book', book_slug=book.slug) }}">
-                                {{ book.name }}
-                            </a>
-                        </h5>
-                        <p class="card-text">{{ book.author }}</p>
-                        <p class="text-muted small">
-                            Vocabulary: {{ summary.vocabulary_distribution[book.slug] }},
-                            Words: {{ summary.word_count_distribution[book.slug]|short_number }}
-                        </p>
-                        <a class="btn btn-outline-secondary read-button"
-                           data-book-slug="{{ book.slug }}"
-                           href="{{ url_for('get_chapter', book_slug=book.slug, chapter_no=1) }}">Start Reading</a>
+<main>
+    <section class="container box mt-5">
+        <h2 class="fs-5">Books</h2>
+        <div class="row">
+            {% for book in books %}
+                <div class="col-12 col-sm-4 d-flex justify-content-center">
+                    <div class="card mt-3 border-0 text-center" style="width: 10rem;">
+                        <a href="{{ url_for('get_book', book_slug=book.slug) }}">
+                            <img src="{{ book.cover }}" class="card-img-top cover" alt="{{ book.name }}">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a href="{{ url_for('get_book', book_slug=book.slug) }}">
+                                    {{ book.name }}
+                                </a>
+                            </h5>
+                            <p class="card-text">{{ book.author }}</p>
+                            <p class="text-muted small">
+                                Vocabulary: {{ summary.vocabulary_distribution[book.slug] }},
+                                Words: {{ summary.word_count_distribution[book.slug]|short_number }}
+                            </p>
+                            <a class="btn btn-outline-secondary read-button"
+                               data-book-slug="{{ book.slug }}"
+                               href="{{ url_for('get_chapter', book_slug=book.slug, chapter_no=1) }}">Start Reading</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
-    </div>
-</div>
+            {% endfor %}
+        </div>
+    </section>
 
-<div class="container box my-5">
-    <h2 class="fs-5"><a href="{{ url_for('get_all_news') }}">News</a></h2>
-    <ol>
-        {%  for n in news %}
-            <li>
-                <a href="{{ url_for('get_news', id=n.id) }}">{{ n.title }}</a>
-                <span class="small text-muted fw-light"> - {{ n.publication }}, {{ n.date|time_ago }}</span>
-            </li>
-        {% endfor %}
-    </ol>
-</div>
+    <section class="container box my-5">
+        <h2 class="fs-5"><a href="{{ url_for('get_all_news') }}">News</a></h2>
+        <ol>
+            {%  for n in news %}
+                <li>
+                    <a href="{{ url_for('get_news', id=n.id) }}">{{ n.title }}</a>
+                    <span class="small text-muted fw-light"> - {{ n.publication }}, {{ n.date|time_ago }}</span>
+                </li>
+            {% endfor %}
+        </ol>
+    </section>
+</main>
 
 {% include 'common/footer.html' %}
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-<script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         initFontAndDarkButtons();
