--- a/src/templates/news-home.html
+++ b/src/templates/news-home.html
@@ -11,40 +11,39 @@
 
 {% include 'common/navbar.html' %}
 
-<div class="container box my-5">
-    <h1 class="fs-5 text-start">All News</h1>
-    <ol>
-        {%  for n in all_news %}
-            <li class="my-2">
-                <a href="{{ url_for('get_news', id=n.id) }}">{{ n.title }}</a>
-                <span class="small text-muted fw-light"> - {{ n.publication }}, {{ n.date|time_ago }}</span>
-            </li>
-        {% endfor %}
-    </ol>
-</div>
+<main>
+    <section class="container box my-5">
+        <h1 class="fs-5 text-start">All News</h1>
+        <ol>
+            {%  for n in all_news %}
+                <li class="my-2">
+                    <a href="{{ url_for('get_news', id=n.id) }}">{{ n.title }}</a>
+                    <span class="small text-muted fw-light"> - {{ n.publication }}, {{ n.date|time_ago }}</span>
+                </li>
+            {% endfor %}
+        </ol>
+    </section>
 
-<div class="container box my-5">
-    <nav aria-label="...">
-        <ul class="pagination justify-content-center">
-            {% if page > 1 %}
-            <li class="page-item">
-                <a href="{{ url_for('get_all_news', page=page-1) }}">Prev</a>
-            </li>
-            {% endif %}
+    <section class="container box my-5">
+        <nav aria-label="...">
+            <ul class="pagination justify-content-center">
+                {% if page > 1 %}
+                <li class="page-item">
+                    <a href="{{ url_for('get_all_news', page=page-1) }}">Prev</a>
+                </li>
+                {% endif %}
 
-            {% if news_count != 0 %}
-            <li class="page-item">
-                <a href="{{ url_for('get_all_news', page=page+1) }}">Next</a>
-            </li>
-            {% endif %}
-        </ul>
-    </nav>
-</div>
+                {% if news_count != 0 %}
+                <li class="page-item">
+                    <a href="{{ url_for('get_all_news', page=page+1) }}">Next</a>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+    </section>
+</main>
 
 {% include 'common/footer.html' %}
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-<script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         initFontAndDarkButtons();
