--- a/src/templates/common/footer.html
+++ b/src/templates/common/footer.html
@@ -1,3 +1,9 @@
+{% include 'common/offcanvas.html' %}
+{% include 'common/modal.html' %}
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
+
 <footer class="container box my-5">
     <p class="text-center">
         <a href="/" class="small text-muted">
