--- a/src/templates/common/navbar.html
+++ b/src/templates/common/navbar.html
@@ -1,5 +1,5 @@
-<header>
-    <nav class="navbar navbar-dark bg-dark sticky-top">
+<header class="sticky-top m-0 p-0">
+    <nav class="navbar navbar-dark bg-dark">
         <div class="container box">
             <a class="navbar-brand" href="/">{{ sitename }}</a>
             <form class="d-flex" role="search">
