--- a/src/templates/common/navbar.html
+++ b/src/templates/common/navbar.html
@@ -1,12 +1,30 @@
 <header class="sticky-top m-0 p-0">
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container box">
             <a class="navbar-brand" href="/">{{ sitename }}</a>
-            <form class="d-flex" role="search">
-                <button type="button" class="btn btn-outline-success btn-sm" id="setting-btn"
-                        data-bs-toggle="modal" data-bs-target="#settings-modal"
-                >Settings</button>
-            </form>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#main-navbar" aria-controls="main-navbar"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="main-navbar">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Books</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('get_all_news') }}">News</a>
+                    </li>
+                </ul>
+
+                <div>
+                    <button type="button" class="btn btn-outline-success btn-sm" id="setting-btn"
+                            data-bs-toggle="modal" data-bs-target="#settings-modal"
+                    >Settings</button>
+                </div>
+            </div>
+
         </div>
     </nav>
 </header>
