--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Readin offers three classic English books, complete with word and sentence translations, tailored for English learners seeking to improve their language skills.">
     {% include 'common/head_meta.html' %}
 </head>
-<body>
+<body class="{% if user_settings.darkMode == 'dark' %}bg-dark text-light{% endif %}" style="font-size: {{ user_settings.fontSize }};">
 
 {% include 'common/navbar.html' %}
 <main>
