Save language to cookie

--- a/src/templates/common/footer.html
+++ b/src/templates/common/footer.html
@@ -7,7 +7,7 @@
 <script type="application/javascript">
     document.addEventListener('DOMContentLoaded', function () {
         initFontAndDarkButtons();
-        languageSelection();
+        initLanguageSelection();
     });
 </script>
 
