--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -5,9 +5,10 @@
   <meta name="description" content="{{ book.description }}">
   {% include 'common/head_meta.html' %}
 </head>
-<body>
+<body class="{% if user_settings.darkMode == 'dark' %}bg-dark text-light{% endif %}" style="font-size: {{ user_settings.fontSize }};">
 
 {% include 'common/navbar.html' %}
+
 <main>
     <section class="container box my-5">
       <div class="d-flex">
