--- a/src/templates/common/navbar.html
+++ b/src/templates/common/navbar.html
@@ -1,12 +1,7 @@
 <header class="sticky-top m-0 p-0">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
         <div class="container box">
             <a class="navbar-brand" href="/">{{ sitename }}</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#main-navbar" aria-controls="main-navbar"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
